ossm-tcp-egress/case-2/bookinfo/dr-mysql-tcp-egress.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: mysql-egress
  namespace: bookinfo
spec:
  exportTo:
  - .
  host: default-egress.istio-system.svc.cluster.local
  subsets:
  - name: v2-mysql
