ossm-tcp-egress/case-2/bookinfo/vs-mysql-tcp-egress_v2.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: mysql-egress
  namespace: bookinfo
spec:
  exportTo:
  - .
  gateways:
  - mesh
  hosts:
  - mysql.external
  - mysql-3.external
  tcp:
  - match:
    - port: 3306
      sourceLabels:
        app: ratings
    route:
    - destination:
        host: default-egress.istio-system.svc.cluster.local
        port:
          number: 443
        subset: v2-mysql
      weight: 100
  - match:
    - port: 3306
      sourceLabels:
        app: ratings-custom
    route:
    - destination:
        host: default-egress.istio-system.svc.cluster.local
        port:
          number: 9443
        subset: v2-mysql
